fix links & 404 page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ use-site-title: true
 <p>При этом, международные проекты, такие как Archive.org обеспечивают сохранение лишь наиболее видимых веб-сайтов и только в части наименнее ресурсоёмких материалов (основных веб-страниц). Все материалы представленные в виде PDF документов, файлов MS Office, ZIP архивов и иных форматов в итоге многие материалы теряются навсегда.</p>
 
 <h4>Аналогичные проекты </h4>
-<p>В мире существует несколько десятков проектов по цифровому сохранению главным из которых остаётся <a href="www.archive.org">Интернет-Архив</a>. Также существуют инициативы по созданию обязательных архивов веб-сайтов и иных цифровых объектов в национальных библиотеках большинства развитых стран мира. Общий список проектов можно увидеть по ссылкам:</p>
+<p>В мире существует несколько десятков проектов по цифровому сохранению главным из которых остаётся <a href="http://www.archive.org">Интернет-Архив</a>. Также существуют инициативы по созданию обязательных архивов веб-сайтов и иных цифровых объектов в национальных библиотеках большинства развитых стран мира. Общий список проектов можно увидеть по ссылкам:</p>
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/List_of_digital_preservation_initiatives">http://en.wikipedia.org/wiki/List_of_digital_preservation_initiatives</a></li>
   <li><a href="http://en.wikipedia.org/wiki/List_of_Web_archiving_initiatives">http://en.wikipedia.org/wiki/List_of_Web_archiving_initiatives</a></li>
@@ -59,7 +59,7 @@ use-site-title: true
 <p>Ряд ресурсов неудобных для архивации как веб-сайтов или же теряющих при этом удобство использования мы архивируем преобразуя их сразу же в базы данных.</p>
 <p>Таким образом уже архивированы:</p>
 <ul>
-  <li><a href="blog.kremlin.ru">Блог Дмитрия Медведева</a> - <a href="http://hubofdata.ru/dataset/blog-medvedev">http://hubofdata.ru/dataset/blog-medvedev</a> все данные собраны в базу данных пригодную для анализа и обработки;</li>
+  <li><a href="http://blog.kremlin.ru">Блог Дмитрия Медведева</a> - <a href="http://hubofdata.ru/dataset/blog-medvedev">http://hubofdata.ru/dataset/blog-medvedev</a> все данные собраны в базу данных пригодную для анализа и обработки;</li>
   <li>База голосований депутатов Государственной Думы - <a href="http://hubofdata.ru/dataset/duma-votes">http://hubofdata.ru/dataset/duma-votes</a> все данные собраны в базу данных пригодную для анализа и обработки</li>
 </ul>
 
