--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@ use-site-title: true
 
 <p>Одна из особенностей современного мира во всё большем возрастании доли материалов создаваемых только в цифровой форме. В то же время принципы долгосрочного сохранения таких материалов значительно запаздывают скорости появления и уничтожения информации. </p>
 <p>“Цифровое сохранение” - это проект по консервации и архивации ключевых цифровых ресурсов находящихся под риском уничтожения. </p>
-<p>Цель проекта в поиске и сохранении веб-сайтов и иных цифровых материалов находящихся под угрозой уничтожения.</p>
+<p>Цель инициативы в поиске и сохранении веб-сайтов и иных цифровых материалов находящихся под угрозой уничтожения.</p>
 
 <h4>Актуальность </h4>
 <p>На сегодняшний день в России и всём русскоязычном сегменте сети Интернет отсутствуют инициативы по долгосрочной консервации материалов созданных только в цифровой форме. Многочисленные проекты, по разным причинам, исчезают из публичного пространства и становятся недоступными.</p>
-<p>При этом, международные проекты, такие как Archive.org обеспечивают сохранение лишь наиболее видимых веб-сайтов и только в части наименнее ресурсоёмких материалов (основных веб-страниц). Все материалы представленные в виде PDF документов, файлов MS Office, ZIP архивов и иных форматов в итоге многие материалы теряются навсегда.</p>
+<p>При этом, международные инициативы, такие как Archive.org обеспечивают сохранение лишь наиболее видимых веб-сайтов и только в части наименнее ресурсоёмких материалов (основных веб-страниц). Все материалы представленные в виде PDF документов, файлов MS Office, ZIP архивов и иных форматов в итоге многие материалы теряются навсегда.</p>
 
-<h4>Аналогичные проекты </h4>
-<p>В мире существует несколько десятков проектов по цифровому сохранению главным из которых остаётся <a href="http://www.archive.org">Интернет-Архив</a>. Также существуют инициативы по созданию обязательных архивов веб-сайтов и иных цифровых объектов в национальных библиотеках большинства развитых стран мира. Общий список проектов можно увидеть по ссылкам:</p>
+<h4>Аналогичные инициативы </h4>
+<p>В мире существует несколько десятков инициативы по цифровому сохранению главным из которых остаётся <a href="http://www.archive.org">Интернет-Архив</a>. Также существуют инициативы по созданию обязательных архивов веб-сайтов и иных цифровых объектов в национальных библиотеках большинства развитых стран мира. Общий список проектов можно увидеть по ссылкам:</p>
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/List_of_digital_preservation_initiatives">http://en.wikipedia.org/wiki/List_of_digital_preservation_initiatives</a></li>
   <li><a href="http://en.wikipedia.org/wiki/List_of_Web_archiving_initiatives">http://en.wikipedia.org/wiki/List_of_Web_archiving_initiatives</a></li>
 </ul>
 
-<h3>Подпроекты </h3>
+<h3>Проекты</h3>
 
-<h4>Специальные архивы </h4>
-<p>Подпроект включает инициативы по консервации онлайн сайтов по выбранным темам: религия, история, экономика,  наука и многое другое. </p>
-<p>Данные коллекции подготавливаются в формате планов архивации и последовательно консервируются.</p>
-<p>Текущий список тем и планов архивации: <br> <a href="https://drive.google.com/folderview?id=0B5haFpvgzsyhWXVXQXlhdDJtXzA&usp=sharing">https://drive.google.com/folderview?id=0B5haFpvgzsyhWXVXQXlhdDJtXzA&usp=sharing</a></p>
+Национальный цифровой архив состоит из множества проектов связанных общей идеей архивации современного цифрового наследия.
 
 <h4>“Консервированное государство” / Preserved government</h4>
 <p>К сожалению, в России архивация официальных веб-ресурсов, социальных сетей и иных материалов полностью отсутствует. У нас нет требований к обязательному долгосрочному сохранению информации и не остается другого способа сохранять информацию кроме как делать это самостоятельно.</p>
@@ -49,7 +46,8 @@ use-site-title: true
 </ul>
 
 <h5>Старые версии официальных сайтов</h5>
-<p>Многие из государственных сайтов регулярно уничтожаются органами власти при закрытии проекта по окончанию финансирования, при замене движка сайта или при очередной реформе органов власти. Мы архивируем старые версии сайтов до их уничтожения и оставляем в виде архивов Httrack для общего доступа.</p>
+<p>Многие из государственных сайтов регулярно уничтожаются органами власти при закрытии 
+  а по окончанию финансирования, при замене движка сайта или при очередной реформе органов власти. Мы архивируем старые версии сайтов до их уничтожения и оставляем в виде архивов Httrack для общего доступа.</p>
 <p>Совокупный объём архивов 88 сайтов составляет 22 гигабайта в запакованном виде и до 300 гигабайт в распакованном. Сейчас решается вопрос по тому как сделать все архивы доступными для широкой публики и не чтобы выходили не слишком большие расходы на трафик.</p>
 <p>Список собранных архивов:</p>
 <p><a href="https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdDJlczBoc095QmdLV25pY2NtSFRDaFE&usp=sharing">https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdDJlczBoc095QmdLV25pY2NtSFRDaFE&usp=sharing</a></p>
@@ -71,6 +69,12 @@ use-site-title: true
   <li>любые исторические данные в табличной форме (пригодные для преобразоваия в открытые данные).</li>
 </ul>
 <p>В ближайших планах есть запуск платформы сбора цифровых материалов для накопленных документов. Далее, документы будут последовательно преобразовываться в базы данных и над ними будет запущено API.</p>
+
+<h4>Специальные архивы</h4>
+<p>Проект включает инициативы по консервации онлайн сайтов по выбранным темам: религия, история, экономика,  наука и многое другое. </p>
+<p>Данные коллекции подготавливаются в формате планов архивации и последовательно консервируются.</p>
+<p>Текущий список тем и планов архивации: <br> <a href="https://drive.google.com/folderview?id=0B5haFpvgzsyhWXVXQXlhdDJtXzA&usp=sharing">https://drive.google.com/folderview?id=0B5haFpvgzsyhWXVXQXlhdDJtXzA&usp=sharing</a></p>
+
 
 <h5>TODO: Планы развития</h5>
 <h6>Архивация социальных аккаунтов:</h6>
@@ -97,7 +101,7 @@ use-site-title: true
   <li>сделать специализированные API для каждого из специализированных архивов.</li>
 </ul>
 
-<h5>Похожие проекты</h5>
+<h5>Похожие инициативы</h5>
 <ul>
   <li><a href="http://govinfo.library.unt.edu/default.htm"><b>CyberCemetery</b></a>. Архивы государственных сайтов расформированных ведомств США. Поддерживается университетом Северного Техаса.</li>
   <li><a href="http://pandora.nla.gov.au/"><b>Pandora</b></a> - Австралийский веб архив</li>
