--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Национальный цифровой архив России
-subtitle: Russian national digital archive (archive.infoculture.ru) Национальный цифровой архив России (archive.infoculture.ru)
+subtitle: Russian national digital archive (ruarxive.org) Национальный цифровой архив России (ruarxive.org)
 use-site-title: true
 ---
 
