--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: page
 title: Национальный цифровой архив России
-subtitle: Russian national digital archive (ruarxive.org) Национальный цифровой архив России (ruarxive.org)
+subtitle: Russian national digital archive (ruarxive.org)
 use-site-title: true
 ---
 
-<p>Одна из особенностей современного мира во всё большем возрастании доли материалов создаваемых только в цифровой форме. В то же время принципы долгосрочного сохранения таких материалов значительно запаздывают скорости появления и уничтожения информации. </p>
-<p>“Цифровое сохранение” - это проект по консервации и архивации ключевых цифровых ресурсов находящихся под риском уничтожения. </p>
-<p>Цель инициативы в поиске и сохранении веб-сайтов и иных цифровых материалов находящихся под угрозой уничтожения.</p>
+<p>Одна из особенностей современного мира - всё большее возрастание доли материалов, создаваемых исключительно в цифровой форме. В то же время темпы долгосрочного сохранения таких материалов значительно отстают от скорости появления и уничтожения информации.</p>
+<p>«Цифровое сохранение» — это проект по консервации и архивации ключевых цифровых ресурсов, находящихся под риском уничтожения.</p>
+<p>Цель инициативы — поиск и сохранение веб-сайтов и иных цифровых материалов, находящихся под угрозой уничтожения.</p>
 
 <h4>Актуальность </h4>
-<p>На сегодняшний день в России и всём русскоязычном сегменте сети Интернет отсутствуют инициативы по долгосрочной консервации материалов созданных только в цифровой форме. Многочисленные проекты, по разным причинам, исчезают из публичного пространства и становятся недоступными.</p>
-<p>При этом, международные инициативы, такие как Archive.org обеспечивают сохранение лишь наиболее видимых веб-сайтов и только в части наименнее ресурсоёмких материалов (основных веб-страниц). Все материалы представленные в виде PDF документов, файлов MS Office, ZIP архивов и иных форматов в итоге многие материалы теряются навсегда.</p>
+<p>На сегодняшний день в России и всём русскоязычном сегменте сети Интернет отсутствуют инициативы по долгосрочной консервации материалов, созданных только в цифровой форме. Многочисленные проекты исчезают из публичного пространства и становятся недоступными в силу различных причин.</p>
+<p>При этом международные инициативы, такие как Archive.org, обеспечивают сохранение лишь наиболее видимых веб-сайтов и только в части наименее ресурсоёмких материалов (основных веб-страниц). В итоге многие материалы, представленные в виде PDF документов, файлов MS Office, ZIP архивов и иных форматов, теряются навсегда.</p>
 
 <h4>Аналогичные инициативы </h4>
 <p>В мире существует несколько десятков инициативы по цифровому сохранению главным из которых остаётся <a href="http://www.archive.org">Интернет-Архив</a>. Также существуют инициативы по созданию обязательных архивов веб-сайтов и иных цифровых объектов в национальных библиотеках большинства развитых стран мира. Общий список проектов можно увидеть по ссылкам:</p>
@@ -24,11 +24,11 @@ use-site-title: true
 
 Национальный цифровой архив состоит из множества проектов связанных общей идеей архивации современного цифрового наследия.
 
-<h4>“Консервированное государство” / Preserved government</h4>
+<h4>«Консервированное государство» / Preserved government</h4>
 <p>К сожалению, в России архивация официальных веб-ресурсов, социальных сетей и иных материалов полностью отсутствует. У нас нет требований к обязательному долгосрочному сохранению информации и не остается другого способа сохранять информацию кроме как делать это самостоятельно.</p>
 <p>Мы ведем регулярную архивацию официальных материалов, по следующим направлениям:</p>
 <ul>
-  <li>oфициальных аккаунты в социальных сетях;</li>
+  <li>oфициальные аккаунты в социальных сетях;</li>
   <li>официальные сайты органов власти, официальных лиц, политических партий;</li>
   <li>исторические данные — ключевые исторические документы и, особенно, базы данных;</li>
 </ul>
@@ -39,22 +39,21 @@ use-site-title: true
   <li>Список официальных твиттер аккаунтов <a href="https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdEs4U2d5RHh0eFN0UFRCR2xJbkZ0OVE&usp=sharing">https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdEs4U2d5RHh0eFN0UFRCR2xJbkZ0OVE&usp=sharing</a></li>
   <li>Текущий список каналов на Youtube <a href="https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdHNEemRWQS1jckJEdEphSnk0a3ZEbGc&usp=sharing">https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdHNEemRWQS1jckJEdEphSnk0a3ZEbGc&usp=sharing</a></li>
 </ul>
-<p>На сегодняшний день собираются данные 52 официальных Twitter аккаунтов и публикуются здесь:</p>
+<p>На сегодняшний день собираются данные 52 официальных твиттер-аккаунтов и публикуются здесь:</p>
 <ul>
   <li>База данных «Архивы государственных твиттеров» - <a href="http://hubofdata.ru/dataset/govtwitters-archives">http://hubofdata.ru/dataset/govtwitters-archives</a></li>
   <li>Группа массивов данных «Архивы государственных микроблогов» - <a href="http://hubofdata.ru/group/govtwitters ">http://hubofdata.ru/group/govtwitters </a></li>
 </ul>
 
 <h5>Старые версии официальных сайтов</h5>
-<p>Многие из государственных сайтов регулярно уничтожаются органами власти при закрытии 
-  а по окончанию финансирования, при замене движка сайта или при очередной реформе органов власти. Мы архивируем старые версии сайтов до их уничтожения и оставляем в виде архивов Httrack для общего доступа.</p>
-<p>Совокупный объём архивов 88 сайтов составляет 22 гигабайта в запакованном виде и до 300 гигабайт в распакованном. Сейчас решается вопрос по тому как сделать все архивы доступными для широкой публики и не чтобы выходили не слишком большие расходы на трафик.</p>
+<p>Многие из государственных сайтов регулярно уничтожаются органами власти при закрытии или по окончанию финансирования, при замене движка сайта или при очередной реформе органов власти. Мы архивируем старые версии сайтов до их уничтожения и оставляем в виде архивов Httrack для общего доступа.</p>
+<p>Совокупный объём архивов 88 сайтов составляет 22 гигабайта в запакованном виде и до 300 гигабайт в распакованном. Сейчас решается вопрос того, как сделать все архивы доступными для широкой публики и при этом избежать слишком больших расходов на трафик.</p>
 <p>Список собранных архивов:</p>
 <p><a href="https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdDJlczBoc095QmdLV25pY2NtSFRDaFE&usp=sharing">https://docs.google.com/spreadsheet/ccc?key=0AphaFpvgzsyhdDJlczBoc095QmdLV25pY2NtSFRDaFE&usp=sharing</a></p>
-<p>Если какие-то из этих архивов срочно Вам нужны — напишите на ibegtin@infoculture.ru и вам будет переслана ссылка по которой его можно скачать.</p>
+<p>Если какой-то из этих архивов потребуются вам срочно  — напишите на ibegtin@infoculture.ru и мы перешлем ссылку, по которой его можно скачать.</p>
 
 <h5>Архивация специализированных ресурсов</h5>
-<p>Ряд ресурсов неудобных для архивации как веб-сайтов или же теряющих при этом удобство использования мы архивируем преобразуя их сразу же в базы данных.</p>
+<p>Ряд ресурсов, неудобных для архивации в виде веб-сайтов или же теряющих при этом удобство использования, мы архивируем, преобразуя их сразу же в базы данных.</p>
 <p>Таким образом уже архивированы:</p>
 <ul>
   <li><a href="http://blog.kremlin.ru">Блог Дмитрия Медведева</a> - <a href="http://hubofdata.ru/dataset/blog-medvedev">http://hubofdata.ru/dataset/blog-medvedev</a> все данные собраны в базу данных пригодную для анализа и обработки;</li>
@@ -62,13 +61,13 @@ use-site-title: true
 </ul>
 
 <h5>Исторические данные</h5>
-<p>Сейчас мы собираем такие данные как:</p>
+<p>Сейчас мы собираем следующие данные:</p>
 <ul>
   <li>бюджеты и статистические справочники СССР, РСФСР, союзных республик;</li>
   <li>любые реестры, телефонные справочники и иные исторические базы данных в бумажном виде;</li>
-  <li>любые исторические данные в табличной форме (пригодные для преобразоваия в открытые данные).</li>
+  <li>любые исторические данные в табличной форме, пригодные для преобразования в открытые данные.</li>
 </ul>
-<p>В ближайших планах есть запуск платформы сбора цифровых материалов для накопленных документов. Далее, документы будут последовательно преобразовываться в базы данных и над ними будет запущено API.</p>
+<p>В наших ближайших планах - запуск платформы сбора цифровых материалов для накопленных документов. После чего документы будут последовательно преобразовываться в базы данных и над ними будет запущено API.</p>
 
 <h4>Специальные архивы</h4>
 <p>Проект включает инициативы по консервации онлайн сайтов по выбранным темам: религия, история, экономика,  наука и многое другое. </p>
@@ -97,8 +96,8 @@ use-site-title: true
 </ul>
 <h6>Специализированная архивация:</h6>
 <ul>
-  <li>сделать форму отправки ресурсов наиболее важных для архивации;</li>
-  <li>сделать специализированные API для каждого из специализированных архивов.</li>
+  <li>создание формы отправки ресурсов, наиболее важных для архивации;</li>
+  <li>создание специализированного API для каждого из специализированных архивов.</li>
 </ul>
 
 <h5>Похожие инициативы</h5>
@@ -111,7 +110,7 @@ use-site-title: true
 <ul>
   <li><a href="https://drive.google.com/folderview?id=0B5haFpvgzsyhYW1lOHBiT1hrRG8&usp=sharing">Открытые материалы проекта</a></li>
   <li><a href="https://drive.google.com/folderview?id=0B5haFpvgzsyhWXVXQXlhdDJtXzA&usp=sharing">Планы архивации по коллекциям </a></li>
-  <li><a href="http://opengovdata.ru/projects/govarchive/">Описание проекта “Консервированное государство”</a></li>
+  <li><a href="http://opengovdata.ru/projects/govarchive/">Описание проекта «Консервированное государство»</a></li>
   <li><a href="https://github.com/ivbeg/preserved-government/wiki">Wiki Preserved Government</a></li>
 </ul>
 
